# Move-semantics

./: CMakeLists.txt  README.md  debug.hpp  expect.hpp  noisy1.hpp  noisy2.hpp  print.hpp  to_string.hpp  uniqueid.hpp  usage.cpp
